# markdown-app

./: .gitignore  CLAUDE.md  NEXT_STEPS.md  PLAN-ANDROID.md  PLAN.md  README.md  SYNC.md  index.html  package-lock.json  package.json  vite.config.ts
samples/: index.md  linked-note.md  torture-test.md
samples/archive/: old-plan.md
samples/notes/: daily.md  ideas.md  overview.md
samples/specs/: api-spec.md  design.md  overview.md
src/: App.tsx  historyBridge.ts  ipc.ts  linkRouter.ts  main.tsx  pathUtils.ts  persist.ts  platform.ts  taskMarkers.ts  theme.ts  vault.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src/components/: AppBar.tsx  ConflictBanner.tsx  Editor.tsx  Favourites.tsx  FolderBrowser.tsx  FolderPickerDialog.tsx  LinkPopover.tsx  NewFileDialog.tsx  OverflowMenu.tsx  QuickSwitcher.tsx  Reader.tsx  ReaderBlocks.tsx  SearchPanel.tsx  Toc.tsx  Tree.tsx
src/hooks/: useIsMobile.ts  useMediaQuery.ts
src/markdown/: highlight.ts  linkStyling.ts  mermaid.ts  pipeline.tsx  rehypeCallouts.ts  remarkWikilink.ts
src/stores/: appStore.ts
src/styles/: base.css  editor.css  mobile.css  reader.css  tokens.css
tests/: README.md  edittest.mjs  fileopstest.mjs  helpers.mjs  linktest.mjs  mobiletest.mjs  run-all.mjs  searchtest.mjs  smoke.mjs
