[package]
name = "markdown-reader"
version = "0.1.0"
description = "A beautiful, viewer-first markdown app"
edition = "2021"

[lib]
name = "markdown_reader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-fs = "2"
tauri-plugin-persisted-scope = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "8"
ignore = "0.4"
grep-searcher = "0.1"
grep-regex = "0.1"

[target.'cfg(not(target_os = "android"))'.dependencies]
trash = "5"
